Fixes issue with the large cursor on Safari in the comment section.
This was being caused due to the `display: inline-block` on the contenteditable div.

--- a/apps/comments/css/comments.scss
+++ b/apps/comments/css/comments.scss
@@ -17,9 +17,12 @@
 }
 
 #commentsTabView .newCommentForm .message {
-	/* width = 100% - (width of submit button (44px) + margin (3px) + inline-block gap) */
-	width: calc(100% - 52px);
-	display: inline-block;
+	/* width = 100% - (width of submit button (44px) + margin (3px) + border (1px)) */
+	width: calc(100% - 48px);
+	/* Need to use float left instead of display inline-block because Safari shows a big cursor */
+	float: left;
+	/* To align it to the button on the side */
+	margin-top: 5px;
 }
 
 #commentsTabView .newCommentForm .submit {
